--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,13 +1,21 @@
-DOCUMENT = doc
+STANDALONE = StandaloneDoc
+EMBEDDED = EmbeddedDoc
+DOCUMENT = EmbeddedDoc
 
-.PHONY: all doc single bib clean
+.PHONY: all standalone embedded doc single bib clean
 
-all:	single bib doc clean
+all:	standalone embedded
+
+standalone: DOCUMENT=$(STANDALONE)
+standalone: single bib doc clean
+
+embedded: DOCUMENT=$(EMBEDDED)
+embedded: single bib doc clean
 
 doc:
-	for i in {1..3}; do \
-		pdflatex $(DOCUMENT).tex; \
-	done
+	pdflatex $(DOCUMENT).tex
+	pdflatex $(DOCUMENT).tex
+	pdflatex $(DOCUMENT).tex
 
 single:
 	pdflatex $(DOCUMENT).tex
@@ -16,11 +24,11 @@ bib:
 	bibtex $(DOCUMENT).aux
 
 clean:
-	rm *.aux
-	rm *.bbl
-	rm *.blg
-	rm *.log
-	rm *.out
-	rm *.toc
-	rm *.lot
-	rm *.lof
+	rm -f *.aux
+	rm -f *.bbl
+	rm -f *.blg
+	rm -f *.log
+	rm -f *.out
+	rm -f *.toc
+	rm -f *.lot
+	rm -f *.lof
