--- a/diskret/vhdl/commutate/commutate.ucf
+++ b/diskret/vhdl/commutate/commutate.ucf
@@ -1,10 +1,10 @@
 # # period constraints for system clock
-# NET "clk" TNM_NET = clk;
-# TIMESPEC TS_clk = PERIOD "clk" 20 ns HIGH 50%;
+NET "clk" TNM_NET = clk;
+TIMESPEC TS_clk = PERIOD "clk" 20 ns HIGH 50%;
 # 
 # # I/O-constraints for system clock and reset input
-# NET "clk" LOC = "C9"  |IOSTANDARD = LVCMOS33;
-# # NET "rst" LOC = "K17" |IOSTANDARD = LVTTL |PULLDOWN ; # = BTN_SOUTH
+NET "clk" LOC = "C9"  |IOSTANDARD = LVCMOS33;
+NET "rst" LOC = "K17" |IOSTANDARD = LVTTL |PULLDOWN ; # = BTN_SOUTH
 # 
 # # I/O-constraints for ROT_CENTER
 # NET "ROT_C" LOC = "V16" | IOSTANDARD = LVTTL | PULLDOWN ;
@@ -25,10 +25,10 @@ NET "LED<0>" LOC = "F12" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 8 ;
 # NET "BTN_NORTH" LOC = "V4" | IOSTANDARD = LVTTL | PULLDOWN ;
 # 
 # # I/O-constraints for SW
-# NET "SW<0>" LOC = "L13" | IOSTANDARD = LVTTL |   PULLUP ;
-# NET "SW<1>" LOC = "L14" | IOSTANDARD = LVTTL |   PULLUP ;
-# NET "SW<2>" LOC = "H18" | IOSTANDARD = LVTTL |   PULLUP ;
-# NET "SW<3>" LOC = "N17" | IOSTANDARD = LVTTL |   PULLUP ;
+NET "SW<0>" LOC = "L13" | IOSTANDARD = LVTTL |   PULLUP ;
+NET "SW<1>" LOC = "L14" | IOSTANDARD = LVTTL |   PULLUP ;
+NET "SW<2>" LOC = "H18" | IOSTANDARD = LVTTL |   PULLUP ;
+NET "SW<3>" LOC = "N17" | IOSTANDARD = LVTTL |   PULLUP ;
 
 
 # I/O-constraints for PWM
