--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ doc/StandaloneDoc.lof
 doc/StandaloneDoc.lot
 doc/StandaloneDoc.synctex.gz
 doc/StandaloneDoc.blg
+CAD/BLDC_Board/History
+CAD/BLDC_Board/__Previews/Schema.SchDocPreview
