--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 CAD/BLDC_Board/History
 CAD/BLDC_Board/__Previews/Schema.SchDocPreview
 CAD/BLDC_Board/*.PDF
+CAD/BLDC_Board/Project Logs for BLDC_Board
