BOM in Output Job

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ CAD/BLDC_Board/History
 CAD/BLDC_Board/__Previews/Schema.SchDocPreview
 CAD/BLDC_Board/*.PDF
 CAD/BLDC_Board/Project Logs for BLDC_Board
+CAD/BLDC_BOARD/Project Outputs for BLDC_BOARD
